k3s/fasten/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fasten-lb
  namespace: fasten
spec:
  selector:
    app: fasten
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 192.168.1.207
---
kind: Service
apiVersion: v1
metadata:
  name: fasten-int-svc
  namespace: fasten
spec:
  type: ClusterIP
  selector:
    app: fasten
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
