k3s/fasten/ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasten-ing-traefik
  namespace: fasten
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  rules:
  - host: "health.bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fasten-int-svc
            port:
              number: 8080
